# homomorphic-event-sourcing

./: .gitignore  .gitmodules
slides/: cdct.tex  contents.tex  slides.tex
slides/contracts/: nopets  somepets
slides/images/: archi-back.idraw  archi-front.idraw  event-loop.idraw  interaction-loop.idraw  modelling-interaction.idraw  pet-store-iosm.idraw
slides/images/CDCT.graffle/: data.plist  image2.tiff
sources/: .gitignore  README.md  stack.yaml  swagger-v1.json  swagger-v2.json
sources/acquire/: acquire.cabal
sources/acquire-game/: acquire-game.cabal  package.yaml
sources/acquire-game/src/Acquire/: Game.hs
sources/acquire-game/src/Acquire/Game/: Core.hs  Player.hs  Turn.hs
sources/acquire-server/: acquire-server.cabal  package.yaml
sources/acquire-server/main/: mock.hs  server.hs  wsclient.hs
sources/acquire-server/src/: AcquireSpec.hs  mock.hs  wsclient.hs
sources/acquire-server/src/Acquire/: Messages.hs  Model.hs
sources/acquire-server/test/Acquire/: ModelSpec.hs
sources/acquire-tcp/: acquire-tcp.cabal
sources/acquire-tcp/main/: acquire.hs
sources/acquire-tcp/src/Acquire/: Net.hs  Pretty.hs  Robot.hs  Trace.hs
sources/acquire-tcp/src/Acquire/Net/: Game.hs  Player.hs  Server.hs  Types.hs
sources/acquire/src/Acquire/: Net.hs
sources/acquire/src/Acquire/Game/: Cells.hs  Hotels.hs  Play.hs  Tiles.hs
sources/acquire/src/Acquire/Net/: Game.hs  Player.hs  Server.hs  Types.hs
sources/acquire/test/: GameTest.hs  tests.hs
sources/morphism/: morphism.cabal  package.yaml
sources/morphism/src/: Morphism.hs
sources/morphism/test/: Game.hs  MorphismSpec.hs
sources/pet-store/: package.yaml
sources/pet-store-backend/: package.yaml  pet-store-backend.cabal
sources/pet-store-backend/server/: mock.hs  server.hs
sources/pet-store-backend/src/PetStore/: Api.hs  Handler.hs  Log.hs  Messages.hs  Server.hs  Store.hs  Swagger.hs
sources/pet-store-frontend/: index.html  package.json  webpack.config.js
sources/pet-store-frontend/src/: PetSale.tsx  PetView.tsx  View.tsx  ajaxcalls.ts  index.tsx
sources/pet-store-frontend/src-v1/: PetList.tsx  View.tsx  actions.ts  ajaxcalls.ts  index.tsx  reducers.ts  types.ts
sources/pet-store-frontend/src-v2/: PetAddition.tsx  PetList.tsx  UserLogin.tsx  View.tsx  actions.ts  ajaxcalls.ts  reducers.ts  types.ts
sources/pet-store-frontend/test/: ajaxcallsTest.ts  ajaxcalls_noPets_Test.ts  ajaxcalls_somePets_Test.ts
sources/pet-store-v1/: package.yaml
sources/pet-store-v1/driver/: driver.hs
sources/pet-store-v1/mock/: mock.hs
sources/pet-store-v1/server/: server.hs
sources/pet-store-v1/src/PetStore/: Api.hs  Handler.hs  Log.hs  Messages.hs  Model.hs  Server.hs  Store.hs  Swagger.hs
sources/pet-store/driver/: driver.hs
sources/pet-store/mock/: mock.hs
sources/pet-store/src/PetStore/: Api.hs  Driver.hs  Messages.hs  Mock.hs  Model.hs
sources/pet-store/tests/: PetStoreSpec.hs
sources/petclinic-frontend/: .babelrc  package.json  tsconfig.json  webpack.config.js
sources/petclinic-frontend/src/: Pet.tsx  PetAddition.tsx  PetAdmission.tsx  PetList.tsx  PetView.tsx  View.tsx  ajaxcalls.ts  index.tsx  reducers.ts  types.ts
sources/react-ui/: package-lock.json  package.json  tsconfig.json  webpack.config.js  webpack.prod.config.js
sources/react-ui/css/: acquire.css
sources/react-ui/src/: DisplayErrors.tsx  GameBoard.tsx  Messages.tsx  PlayerInput.tsx  View.tsx  ViewGameResult.tsx  ViewGamesList.tsx  ViewTitle.tsx  actions.ts  index.tsx  reducers.ts  socketMiddleware.ts  types.ts
sources/react-ui/test/: ServerContractTest.js
sources/server/: package.yaml
sources/server/src/: Messages.hs  client.hs  mock.hs  server.hs  wsclient.hs
