name:                acquire-tcp
version:             0.1.0.0
license:             Apache-2.0
license-file:        LICENSE
author:              Arnaud Bailly
maintainer:          arnaud.oqube@gmail.com
category:            Game
build-type:          Simple
cabal-version:       >=1.20

library
  build-depends:       base
                     , acquire-game
                     , aeson
                     , ansi-wl-pprint
                     , array
                     , containers
                     , random
                     , directory
                     , MonadPrompt
                     , mtl
                     , network
                     , stm
                     , time
                     , old-locale
                     , async

  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings
                     , RecordWildCards
                     , ScopedTypeVariables
  ghc-options:       -Wall -fno-warn-orphans -rtsopts
  exposed-modules: Acquire.Net
                 , Acquire.Robot
                 , Acquire.Net.Player, Acquire.Net.Server, Acquire.Net.Types, Acquire.Net.Game
                 , Acquire.Trace
                 , Acquire.Pretty

executable acquire
  main-is: acquire.hs
  hs-source-dirs:
      main
  default-extensions: OverloadedStrings
                    , RecordWildCards
                    , ScopedTypeVariables
  ghc-options: -Wall  -fno-warn-orphans -threaded -rtsopts
  build-depends:
                acquire-tcp
              , acquire-game
              , async
              , base
              , bytestring
              , mtl
              , network
              , optparse-applicative
              , random
              , text
  default-language: Haskell2010
